# twitter-service

./: README.md  docker-compose.yml
fastapi/: .env  .env.production  Dockerfile  README  alembic.ini  pyproject.toml
fastapi/app/: main.py
fastapi/app/auth/: jwt.py
fastapi/app/core/: config.py
fastapi/app/db/: crud.py  database.py  models.py  schemas.py
fastapi/app/es/: es_init.py
fastapi/app/twitter/: tweet_fetch.py
fastapi/migrations/: env.py
fastapi/migrations/versions/: 03304cc8e614_init_item.py  56bfcf28c912_init_base.py  7791d225cd50_user_email.py  c7c0374fb534_init.py
s3-es/: .gitignore  Dockerfile  es-template.json  pyproject.toml
s3-es/app/: main.py
s3-es/app/core/: config.py
s3-es/app/es/: es_funcs.py  es_init.py
s3-es/app/s3/: s3_init.py
s3-es/app/tweet_decode/: tweet_decode.py
s3-es/v1/: old tweet schema.py  resource_main.py
twitter-firehose/: Dockerfile  pyproject.toml
twitter-firehose/app/: stream.py
twitter-firehose/app/core/: settings.py
twitter-firehose/app/firehose/: firehosePutter.py
twitter-firehose/app/twitter/: twitterStreamer.py
